--- a/style.css
+++ b/style.css
@@ -1,70 +1,120 @@
-    .img-fluid {
-        width: 100%;
-        margin-top: -140px;
-    }
-    
-    .nav-item i {
-        margin-right: 15px;
-    }
-    
-    .card {
-        float: inline-end;
-        margin-top: 40px;
-        margin: 0 2px;
-    }
-    
-    .card-list {
-        display: flex;
-        justify-content: space-around;
-        margin: 1rem 0;
-    }
-    
-    a {
-        width: 120px;
-    }
-    
-    .stars {
-        float: inline-end;
-        margin: 1rem 0;
-    }
-    
-    .card-header {
-        display: flex;
-        /* flex-direction: row-reverse; */
-        justify-content: space-around;
-        background: none;
-        border-bottom: none;
-        margin-bottom: 1rem;
-    }
-    
-    .icon {
-        float: inline-end;
-        justify-content: space-around;
-        display: flex;
-        margin-left: 50px;
-        margin-top: 60px;
-    }
-    
-    .icon1 {
-        float: inline-end;
-        justify-content: space-around;
-        display: flex;
-        margin-left: 50px;
-        margin-top: 60px;
-    }
-    
-    .icon2 {
-        float: inline-end;
-        justify-content: space-around;
-        display: flex;
-        margin-left: 50px;
-        margin-top: 60px;
-    }
-    
-    .icon3 {
-        float: inline-end;
-        justify-content: space-around;
-        display: flex;
-        margin-left: 50px;
-        margin-top: 60px;
-    }
+        .img-fluid {
+            width: 100%;
+            margin-top: -140px;
+        }
+        
+        .nav-item i {
+            margin-right: 15px;
+        }
+        
+        .card {
+            float: inline-end;
+            margin-top: 40px;
+            margin: 0 2px;
+        }
+        
+        .card-list {
+            display: flex;
+            justify-content: space-around;
+            margin: 1rem 0;
+        }
+        
+        a {
+            width: 120px;
+        }
+        
+        .stars {
+            float: inline-end;
+            margin: 1rem 0;
+        }
+        
+        .card-header {
+            display: flex;
+            /* flex-direction: row-reverse; */
+            justify-content: space-around;
+            background: none;
+            border-bottom: none;
+            margin-bottom: 1rem;
+        }
+        
+        .icon {
+            float: inline-end;
+            justify-content: space-around;
+            display: flex;
+            margin-left: 50px;
+            margin-top: 60px;
+        }
+        
+        .icon1 {
+            float: inline-end;
+            justify-content: space-around;
+            display: flex;
+            margin-left: 50px;
+            margin-top: 60px;
+        }
+        
+        .icon2 {
+            float: inline-end;
+            justify-content: space-around;
+            display: flex;
+            margin-left: 50px;
+            margin-top: 60px;
+        }
+        
+        .icon3 {
+            float: inline-end;
+            justify-content: space-around;
+            display: flex;
+            margin-left: 50px;
+            margin-top: 60px;
+        }
+        
+        .hr {
+            margin-top: 8px;
+        }
+        
+        .h4 {
+            align-items: flex-end;
+            margin-top: 8px;
+            text-decoration: underline;
+            font-size: x-large;
+        }
+        
+        .stars {
+            color: rgb(255, 215, 0);
+        }
+        
+        h5,
+        p {
+            color: black;
+        }
+        
+        .sa {
+            width: min-content;
+        }
+        
+        .icon {
+            color: rgb(255, 255, 255);
+        }
+        
+        .icon1 {
+            color: rgb(255, 255, 255);
+        }
+        
+        .icon2 {
+            color: rgb(255, 255, 255);
+        }
+        
+        .icon3 {
+            color: rgb(255, 255, 255);
+        }
+        
+        h5 {
+            font-size: smaller;
+            text-align: center;
+        }
+        
+        P {
+            color: rgb(114, 114, 114);
+            text-align: right;
+        }
