--- a/style.css
+++ b/style.css
@@ -1,120 +1,72 @@
-        .img-fluid {
-            width: 100%;
-            margin-top: -140px;
-        }
-        
-        .nav-item i {
-            margin-right: 15px;
-        }
-        
-        .card {
-            float: inline-end;
-            margin-top: 40px;
-            margin: 0 2px;
-        }
-        
-        .card-list {
-            display: flex;
-            justify-content: space-around;
-            margin: 1rem 0;
-        }
-        
-        a {
-            width: 120px;
-        }
-        
-        .stars {
-            float: inline-end;
-            margin: 1rem 0;
-        }
-        
-        .card-header {
-            display: flex;
-            /* flex-direction: row-reverse; */
-            justify-content: space-around;
-            background: none;
-            border-bottom: none;
-            margin-bottom: 1rem;
-        }
-        
-        .icon {
-            float: inline-end;
-            justify-content: space-around;
-            display: flex;
-            margin-left: 50px;
-            margin-top: 60px;
-        }
-        
-        .icon1 {
-            float: inline-end;
-            justify-content: space-around;
-            display: flex;
-            margin-left: 50px;
-            margin-top: 60px;
-        }
-        
-        .icon2 {
-            float: inline-end;
-            justify-content: space-around;
-            display: flex;
-            margin-left: 50px;
-            margin-top: 60px;
-        }
-        
-        .icon3 {
-            float: inline-end;
-            justify-content: space-around;
-            display: flex;
-            margin-left: 50px;
-            margin-top: 60px;
-        }
-        
-        .hr {
-            margin-top: 8px;
-        }
-        
-        .h4 {
-            align-items: flex-end;
-            margin-top: 8px;
-            text-decoration: underline;
-            font-size: x-large;
-        }
-        
-        .stars {
-            color: rgb(255, 215, 0);
-        }
-        
-        h5,
-        p {
-            color: black;
-        }
-        
-        .sa {
-            width: min-content;
-        }
-        
-        .icon {
-            color: rgb(255, 255, 255);
-        }
-        
-        .icon1 {
-            color: rgb(255, 255, 255);
-        }
-        
-        .icon2 {
-            color: rgb(255, 255, 255);
-        }
-        
-        .icon3 {
-            color: rgb(255, 255, 255);
-        }
-        
-        h5 {
-            font-size: smaller;
-            text-align: center;
-        }
-        
-        P {
-            color: rgb(114, 114, 114);
-            text-align: right;
-        }
+    .img-fluid {
+        width: 100%;
+        margin-top: -140px;
+    }
+    
+    .nav-item i {
+        margin-right: 15px;
+    }
+    
+    a[class="btn btn-primary"] {
+        background: rgb(214, 26, 26);
+        width: 120px;
+        margin: 8px;
+    }
+    
+    .star {
+        display: flex;
+        width: 100%;
+        margin: 10px;
+        position: absolute;
+        left: -65%;
+        color: rgb(255, 215, 0);
+    }
+    
+    .star [class="bi bi-star-fill star-black"] {
+        color: rgb(114, 114, 114);
+    }
+    
+    .bi-star-fill {
+        margin-right: 3px;
+    }
+    
+    .wrapper .button {
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        float: left;
+        margin: 0 5px;
+        overflow: hidden;
+        color: white;
+        background-color: rgba(71, 4, 85, 0.973);
+        border-radius: 50px;
+        cursor: pointer;
+        box-shadow: 0px 10px 10px;
+        transform: all 0.3s ease-out;
+    }
+    
+    .wrapper .button:hover {
+        width: 90px;
+    }
+    
+    .wrapper .button .icons {
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        border-radius: 50px;
+        text-align: center;
+        box-sizing: border-box;
+        line-height: 60px;
+    }
+    
+    .button i {
+        font-size: 25px;
+        line-height: 60px;
+    }
+    
+    .wrapper .button span {
+        font-size: 20px;
+        font-weight: 300;
+        line-height: 30px;
+        margin-left: 10px;
+    }
