--- a/style.css
+++ b/style.css
@@ -46,10 +46,11 @@
     }
     
     .wrapper .button:hover {
-        width: 90px;
+        width: 110px;
     }
     
     .wrapper .button .icons {
+        float: left;
         display: inline-block;
         height: 60px;
         width: 60px;
@@ -67,6 +68,43 @@
     .wrapper .button span {
         font-size: 20px;
         font-weight: 300;
-        line-height: 30px;
-        margin-left: 10px;
+        line-height: 60px;
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+    
+    h5 {
+        font-size: 15px;
+        text-align: center;
+        margin-top: 14px;
+    }
+    
+    .careds,
+    .phone-card {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    
+    .card {
+        box-shadow: 10px 5px 5px rgb(167, 167, 164);
+        margin-top: 15px;
+    }
+    
+    .main {
+        margin-top: 15px;
+    }
+    
+    .card-img-top {
+        margin: 10px auto;
+    }
+    
+    .phone-card .card-img-top {
+        max-width: 199px;
+    }
+    
+    .teh {
+        margin-top: 20px;
+        font-size: 30px;
+        text-decoration: underline red;
     }
