--- a/style.css
+++ b/style.css
@@ -82,12 +82,6 @@
         margin-right: 10px;
     }
     
-    h5 {
-        font-size: 15px;
-        text-align: center;
-        margin-top: 14px;
-    }
-    
     .careds,
     .phone-card {
         display: flex;
@@ -120,4 +114,12 @@
     
     footer {
         margin-top: 20px;
+        background: rgb(114, 114, 114);
+        color: rgb(255, 255, 255);
+    }
+    
+    .icon {
+        margin-top: 21;
+        display: inline-block;
+        margin-left: 00;
     }
